--- a/src/components/sidebar/SiteBar.module.css
+++ b/src/components/sidebar/SiteBar.module.css
@@ -1,10 +1,16 @@
 .SiteBar {
     background-color: aqua;
-    list-style-type: none;
     padding: 20px 50px 0px 10px;
     margin: 10px 0px 0px 0px;
+    font-size: 18px;
+    height: auto;
+    width: 200px;
 }
 
-.SiteBar li:last-child {
+ul li:last-child {
     margin: 20px 0px 0px 0px;
+}
+
+ul{
+    list-style-type: none;
 }
