--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  max-width: 1200px;
+  min-width: 1200px;
   margin: 0 auto;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
